fix some errors

--- a/frontend/src/app/admin/add-user/add-user.component.html
+++ b/frontend/src/app/admin/add-user/add-user.component.html
@@ -61,7 +61,7 @@
                     <mat-select  placeholder="select"  panelClass="selectPanel2"  (selectionChange)="onChange()" [(value)]="role">   
                         <div *ngFor="let rol of Roles | filterUnique" >
                         
-                        <mat-option   value="{{rol}}">{{rol}}</mat-option>
+                        <mat-option   value="{{rol.name}}">{{rol.name}}</mat-option>
                         </div>
                     </mat-select>
                 </mat-form-field>
