--- a/frontend/src/app/admin/update-user/update-user.component.html
+++ b/frontend/src/app/admin/update-user/update-user.component.html
@@ -62,7 +62,7 @@
                     <mat-select  panelClass="selectPanel2"   (selectionChange)="onChange()" [(value)]="userInfo.role" >
                         
                         <div *ngFor="let rol of Roles" >
-                            <mat-option  value="{{rol}}">{{rol}}</mat-option>
+                            <mat-option  value="{{rol.name}}">{{rol.name}}</mat-option>
                             </div>
                     </mat-select>
                 </mat-form-field>
