--- a/frontend/src/app/confirmation-dialog/confirmation-dialog.component.html
+++ b/frontend/src/app/confirmation-dialog/confirmation-dialog.component.html
@@ -1,12 +1,23 @@
 
 
-<mat-dialog-content>
-	<p>
+<mat-dialog-content >
+	<div *ngIf="confirmMessage!='sync'" >
+	<p >
 		{{confirmMessage}}
 	</p>
+</div>
+	
 </mat-dialog-content>
 <mat-dialog-actions align="center">
+	<div *ngIf="confirmMessage!='sync'" >
 	<button mat-raised-button (click)="dialogRef.close(false)">Cancel</button>
 	<button mat-raised-button style="background-color:#27AE61; color: white;" (click)="dialogRef.close(true)"
 		tabindex="1">Confirm</button>
+	</div>
+
+	<div *ngIf="confirmMessage==='sync'" >
+		<label> Sync is processing </label>
+		<mat-progress-bar mode="indeterminate" ></mat-progress-bar>
+	</div>
 </mat-dialog-actions>
+
