fix filters map

--- a/frontend/src/app/map/map.component.html
+++ b/frontend/src/app/map/map.component.html
@@ -47,8 +47,9 @@
                         <mat-select panelClass="selectPanel" (selectionChange)="onChange4()" [(ngModel)]="option_done"
                               placeholder="Validated filter">
                               <mat-option value="All">All</mat-option>
-                              <mat-option value="Done"> Validated</mat-option>
-                              <mat-option value="Not_Done">Waiting for validation</mat-option>
+                              <mat-option value="Validated"> Validated</mat-option>
+                              <mat-option value="Done">NFC installed</mat-option>
+                              <mat-option value="Not_Done">NFC not Installed</mat-option>
                               <mat-option value="Deleted">Deleted</mat-option>
                         </mat-select>
                   </div>
