--- a/frontend/src/app/admin/update-user/update-user.component.css
+++ b/frontend/src/app/admin/update-user/update-user.component.css
@@ -13,6 +13,26 @@
     color: rgb(100, 102, 102);
     font-family: 'Montserrat', sans-serif;
 }
+.roles-container{
+    margin-left: 215px;
+    width: 250px;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 6px;
+    gap: 10px;
+}
+.role-row{
+    display: flex;
+    flex-flow: row;
+    width: 100%;
+    padding: 10px;
+    background-color: #e7ece9;
+    border-radius: 6px;
+    align-items: center;
+    justify-content: space-between;
+}
   
 .holder{
     background-color: white;
