--- a/frontend/src/app/admin/users/users.component.html
+++ b/frontend/src/app/admin/users/users.component.html
@@ -5,7 +5,7 @@
           <h1 class="list-title">Users</h1>
           <div class="btns">
             <button mat-button style="background-color: #5b7e6d;" routerLink="/roles">Roles Management</button>
-            <button mat-button routerLink="/addUser">Add New User</button>
+            <button mat-button (click)="AddNewuser()">Add New User</button>
           </div>
         </div>
 
