--- a/frontend/src/app/update-client/update-client.component.html
+++ b/frontend/src/app/update-client/update-client.component.html
@@ -84,7 +84,7 @@
 
     </div>
 
-    <div class="container" id="nfc" *ngIf="!nfcShown">
+    <div class="container" id="nfc" *ngIf="nfcShown">
 
         <div class="inputs-container">
             <ng-container *ngFor="let perm of loggedUser.permissions">
@@ -161,7 +161,7 @@
             </div>
             </ng-container>
 
-            <div class="pdv">
+            <div class="pdv" >
 
                 <div class="field">
                     <mat-form-field>
