User info sectors dynamique affichage/sectors name

--- a/frontend/src/app/admin/user-info/user-info.component.html
+++ b/frontend/src/app/admin/user-info/user-info.component.html
@@ -73,9 +73,9 @@
                     <div class="field">
                         <label>Sectors</label>
                         <div class="sectors" >
-                            <ng-container *ngFor="let sector of sectors">
+                            <ng-container *ngFor="let sector of Sectors">
                                 <div class="case">
-                                    <p>{{sector.nameSecteur}}</p>
+                                    <p>{{sector}}</p>
                                 </div>
                             </ng-container>     
                         </div>
